<resources>
    <string name="app_name">DangerZone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home_page">homePage</string>
    <string name="title_activity_emergency_view">EmergencyView</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="SuspiciousActivity">Suspicious Activity</string>
    <string name="Police">Police</string>
    <string name="title_activity_signup">Signup</string>
    <string name="fullname">fullname</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="Password">Password</string>
    <string name="SignUpforTargetTempo">SignUpForTargetTempo</string>
    <string name="sign_up">Sign Up</string>
    <string name="file_data">File Data</string>
    <string name="title_activity_network">Network</string>
    <string name="nm1">1st network member</string>
    <string name="EXAMPLENUM">1st member phone number eg. 1-(XXX)-XXX-XXXX</string>
    <string name="nm2">2nd network member</string>
    <string name="_2nd_network_member">2nd network member</string>
    <string name="_3rd_network_member">3rd network member</string>
    <string name="_2nd_member_phone_number">2nd member phone number</string>
    <string name="input_your_safety_network">Input your safety network</string>
    <string name="_3rd_member_phone_number">3rd member phone number</string>
    <string name="file_network">file network</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="change_or_edit_safety_network">change or edit safety network</string>
    <string name="law_enforcement">LAW ENFORCEMENT</string>

</resources>