<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:background="@drawable/background_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="DuplicateIds"
    >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="5dp"
        android:height="30dp"
        android:background="@drawable/add_network"
        android:drawableEnd="@drawable/ic_baseline_contact_phone_24"
        android:hint="@string/nm1"
        app:layout_constraintBottom_toTopOf="@+id/number1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/number1"
        android:drawableEnd="@drawable/ic_baseline_local_phone_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:height="30dp"
        android:background="@drawable/add_network"
        android:hint="@string/EXAMPLENUM"
        app:layout_constraintBottom_toTopOf="@+id/name2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:drawableEnd="@drawable/ic_baseline_contact_phone_24"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="4dp"
        android:height="30dp"
        android:background="@drawable/add_network"
        android:hint="@string/nm2"
        app:layout_constraintBottom_toTopOf="@+id/number2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/number2"
        android:drawableEnd="@drawable/ic_baseline_local_phone_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="336dp"
        android:height="30dp"
        android:background="@drawable/add_network"
        android:hint="@string/_2nd_member_phone_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="4dp"
        android:drawableEnd="@drawable/ic_baseline_contact_phone_24"
        android:height="30dp"
        android:background="@drawable/add_network"
        android:hint="@string/_3rd_network_member"
        app:layout_constraintBottom_toTopOf="@+id/number3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/number3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="10dp"
        android:height="30dp"
        android:drawableEnd="@drawable/ic_baseline_local_phone_24"
        android:background="@drawable/add_network"
        android:hint="@string/_3rd_member_phone_number"
        app:layout_constraintBottom_toTopOf="@+id/loadingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name3" />

    <TextView
        android:id="@+id/textView4"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/input_your_safety_network"
        android:textColor="@color/design_default_color_error"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/name1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/fileNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="71dp"
        android:background="@drawable/unrequited_danger"
        android:textStyle="bold"
        android:text="@string/file_network"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name3"
        app:layout_constraintVertical_bias="0.55" />

    <ProgressBar
        android:id="@+id/loadingBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="212dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileNetwork" />


</androidx.constraintlayout.widget.ConstraintLayout>